# dissertation

./: .RData  .Rhistory  .gitignore  .latexmkrc  .pre-commit-config.yaml  .stignore  2025-08-10_Bericht_Fakultätsrat.tex  LICENCE  Makefile  Pipfile  README.md  acronyms.tex  bibliography.bib  commands.tex  constraints.txt  core.html  index.html  justfile  own_publications.bib  paper_draft.tex.old  preamble.tex  progress.ipynb  pyproject.toml  robots.txt  search.json  settings.ini  setup.R  setup.py  sitemap.xml  symbols.tex  thesis.bbl-SAVE-ERROR  thesis.bcf-SAVE-ERROR  thesis.ist  thesis.syg  thesis.syi  thesis.tex  thesis_print.tex
2 Epidemiology/: 03_data.html  04_desiderata.html
3 SSMs/: 04_is.html  04_is_figures.html  05_gaussian_is.html  07_cross_entropy_method_utils.html  08_compare_ce_eis_figures.html  08_compare_ce_eis_univariate.html  08_comparison.html  08_comparison_figures.html  08_ssm_comparison.html  08_ssm_comparison_figures.html  compare_ce_eis_mse.html  compare_ce_eis_mse_figures.html
4 Models/: patch_full_dependencies.html  utilities.html
_docs/: index.html  search.json  sitemap.xml
_proc/: _quarto.yml  index.ipynb  nbdev.yml
backmatter/: bibliography.tex  declaration.tex  glossary.tex  symbols_table.tex
chapters/: 01_introduction.tex  02_00_epidemiology.tex  02_01_objectives.tex  02_02_data.tex  02_02_measures.tex  02_03_data.tex  02_03_dessiderata.tex  02_03_measures.tex  02_04_dessiderata.tex  02_epidemiology.tex  03_00_state_space_models.tex  03_01_Modelling.tex  03_02_LGSSM.tex  03_03_LCSSM.tex  03_04_03_CEM.tex  03_04_04_EIS.tex  (+21 more)
(+439 files in other folders)
